parser/y.output

state 0
	$accept: .File $end 
	DeclarationList: .    (2)

	.  reduce 2 (src line 173)

	File  goto 1
	DeclarationList  goto 2

state 1
	$accept:  File.$end 

	$end  accept
	.  error


state 2
	File:  DeclarationList.    (1)
	DeclarationList:  DeclarationList.TopLevelDeclaration 

	SYSTEM  shift 11
	NATIVE  shift 9
	OPTIONS  shift 12
	ENUM  shift 13
	COMPONENT  shift 10
	IMPORT  shift 14
	.  reduce 1 (src line 161)

	TopLevelDeclaration  goto 3
	ComponentDecl  goto 4
	SystemDecl  goto 5
	OptionsDecl  goto 6
	EnumDecl  goto 7
	ImportDecl  goto 8

state 3
	DeclarationList:  DeclarationList TopLevelDeclaration.    (3)

	.  reduce 3 (src line 175)


state 4
	TopLevelDeclaration:  ComponentDecl.    (4)

	.  reduce 4 (src line 178)


state 5
	TopLevelDeclaration:  SystemDecl.    (5)

	.  reduce 5 (src line 180)


state 6
	TopLevelDeclaration:  OptionsDecl.    (6)

	.  reduce 6 (src line 181)


state 7
	TopLevelDeclaration:  EnumDecl.    (7)

	.  reduce 7 (src line 182)


state 8
	TopLevelDeclaration:  ImportDecl.    (8)

	.  reduce 8 (src line 183)


state 9
	ComponentDecl:  NATIVE.COMPONENT IDENTIFIER LBRACE MethodSigDeclOptList RBRACE 

	COMPONENT  shift 15
	.  error


state 10
	ComponentDecl:  COMPONENT.IDENTIFIER LBRACE ComponentBodyItemOptList RBRACE 

	IDENTIFIER  shift 16
	.  error


state 11
	SystemDecl:  SYSTEM.IDENTIFIER LBRACE SystemBodyItemOptList RBRACE 

	IDENTIFIER  shift 17
	.  error


state 12
	OptionsDecl:  OPTIONS.LBRACE StmtList RBRACE 

	LBRACE  shift 18
	.  error


state 13
	EnumDecl:  ENUM.IDENTIFIER LBRACE IdentifierList RBRACE 

	IDENTIFIER  shift 19
	.  error


state 14
	ImportDecl:  IMPORT.STRING_LITERAL 

	STRING_LITERAL  shift 20
	.  error


state 15
	ComponentDecl:  NATIVE COMPONENT.IDENTIFIER LBRACE MethodSigDeclOptList RBRACE 

	IDENTIFIER  shift 21
	.  error


state 16
	ComponentDecl:  COMPONENT IDENTIFIER.LBRACE ComponentBodyItemOptList RBRACE 

	LBRACE  shift 22
	.  error


state 17
	SystemDecl:  SYSTEM IDENTIFIER.LBRACE SystemBodyItemOptList RBRACE 

	LBRACE  shift 23
	.  error


state 18
	OptionsDecl:  OPTIONS LBRACE.StmtList RBRACE 
	StmtOptList: .    (76)

	.  reduce 76 (src line 521)

	StmtList  goto 24
	StmtOptList  goto 25

state 19
	EnumDecl:  ENUM IDENTIFIER.LBRACE IdentifierList RBRACE 

	LBRACE  shift 26
	.  error


state 20
	ImportDecl:  IMPORT STRING_LITERAL.    (13)

	.  reduce 13 (src line 223)


state 21
	ComponentDecl:  NATIVE COMPONENT IDENTIFIER.LBRACE MethodSigDeclOptList RBRACE 

	LBRACE  shift 27
	.  error


state 22
	ComponentDecl:  COMPONENT IDENTIFIER LBRACE.ComponentBodyItemOptList RBRACE 
	ComponentBodyItemOptList: .    (22)

	USES  shift 36
	METHOD  shift 37
	NATIVE  shift 9
	COMPONENT  shift 10
	PARAM  shift 35
	.  reduce 22 (src line 276)

	ComponentDecl  goto 34
	ComponentBodyItem  goto 30
	ComponentBodyItemList  goto 29
	ComponentBodyItemOptList  goto 28
	ParamDecl  goto 31
	UsesDecl  goto 32
	MethodDecl  goto 33

state 23
	SystemDecl:  SYSTEM IDENTIFIER LBRACE.SystemBodyItemOptList RBRACE 
	SystemBodyItemOptList: .    (52)

	.  reduce 52 (src line 415)

	SystemBodyItemOptList  goto 38

state 24
	OptionsDecl:  OPTIONS LBRACE StmtList.RBRACE 

	RBRACE  shift 39
	.  error


state 25
	StmtList:  StmtOptList.    (75)
	StmtOptList:  StmtOptList.Stmt 

	error  shift 51
	LET  shift 52
	IF  shift 55
	DISTRIBUTE  shift 82
	RETURN  shift 54
	DELAY  shift 57
	WAIT  shift 56
	GO  shift 58
	LOG  shift 59
	SWITCH  shift 61
	LBRACE  shift 60
	RBRACE  reduce 75 (src line 520)
	LPAREN  shift 76
	NOT  shift 69
	MINUS  shift 70
	IDENTIFIER  shift 72
	INT_LITERAL  shift 77
	FLOAT_LITERAL  shift 78
	STRING_LITERAL  shift 79
	BOOL_LITERAL  shift 80
	DURATION_LITERAL  shift 81
	.  error

	Stmt  goto 40
	LetStmt  goto 41
	ExprStmt  goto 42
	ReturnStmt  goto 43
	LogStmt  goto 48
	SwitchStmt  goto 50
	WaitStmt  goto 45
	DelayStmt  goto 46
	BlockStmt  goto 49
	Expression  goto 53
	OrExpr  goto 62
	AndBoolExpr  goto 63
	CmpExpr  goto 64
	AddExpr  goto 65
	MulExpr  goto 66
	UnaryExpr  goto 67
	PrimaryExpr  goto 68
	LiteralExpr  goto 71
	CallExpr  goto 74
	MemberAccessExpr  goto 73
	IfStmt  goto 44
	DistributeExpr  goto 75
	GoStmt  goto 47

state 26
	EnumDecl:  ENUM IDENTIFIER LBRACE.IdentifierList RBRACE 

	IDENTIFIER  shift 84
	.  error

	IdentifierList  goto 83

state 27
	ComponentDecl:  NATIVE COMPONENT IDENTIFIER LBRACE.MethodSigDeclOptList RBRACE 
	MethodSigDeclOptList: .    (16)

	METHOD  shift 88
	.  reduce 16 (src line 249)

	MethodSigDecl  goto 87
	MethodSigDeclList  goto 86
	MethodSigDeclOptList  goto 85

state 28
	ComponentDecl:  COMPONENT IDENTIFIER LBRACE ComponentBodyItemOptList.RBRACE 

	RBRACE  shift 89
	.  error


state 29
	ComponentBodyItemOptList:  ComponentBodyItemList.    (23)
	ComponentBodyItemList:  ComponentBodyItemList.ComponentBodyItem 

	USES  shift 36
	METHOD  shift 37
	NATIVE  shift 9
	COMPONENT  shift 10
	PARAM  shift 35
	.  reduce 23 (src line 278)

	ComponentDecl  goto 34
	ComponentBodyItem  goto 90
	ParamDecl  goto 31
	UsesDecl  goto 32
	MethodDecl  goto 33

state 30
	ComponentBodyItemList:  ComponentBodyItem.    (24)

	.  reduce 24 (src line 281)


state 31
	ComponentBodyItem:  ParamDecl.    (26)

	.  reduce 26 (src line 286)


state 32
	ComponentBodyItem:  UsesDecl.    (27)

	.  reduce 27 (src line 288)


state 33
	ComponentBodyItem:  MethodDecl.    (28)

	.  reduce 28 (src line 289)


state 34
	ComponentBodyItem:  ComponentDecl.    (29)

	.  reduce 29 (src line 290)


state 35
	ParamDecl:  PARAM.IDENTIFIER TypeName 
	ParamDecl:  PARAM.IDENTIFIER TypeName ASSIGN Expression 

	IDENTIFIER  shift 91
	.  error


state 36
	UsesDecl:  USES.IDENTIFIER IDENTIFIER 

	IDENTIFIER  shift 92
	.  error


state 37
	MethodDecl:  METHOD.IDENTIFIER LPAREN MethodParamListOpt RPAREN BlockStmt 
	MethodDecl:  METHOD.IDENTIFIER LPAREN MethodParamListOpt RPAREN TypeName BlockStmt 

	IDENTIFIER  shift 93
	.  error


state 38
	SystemDecl:  SYSTEM IDENTIFIER LBRACE SystemBodyItemOptList.RBRACE 
	SystemBodyItemOptList:  SystemBodyItemOptList.SystemBodyItem 

	LET  shift 52
	USE  shift 99
	RBRACE  shift 94
	OPTIONS  shift 12
	.  error

	SystemBodyItem  goto 95
	OptionsDecl  goto 97
	LetStmt  goto 98
	InstanceDecl  goto 96

state 39
	OptionsDecl:  OPTIONS LBRACE StmtList RBRACE.    (9)

	.  reduce 9 (src line 186)


state 40
	StmtOptList:  StmtOptList Stmt.    (77)

	.  reduce 77 (src line 521)


state 41
	Stmt:  LetStmt.    (78)

	.  reduce 78 (src line 523)


state 42
	Stmt:  ExprStmt.    (79)

	.  reduce 79 (src line 525)


state 43
	Stmt:  ReturnStmt.    (80)

	.  reduce 80 (src line 526)


state 44
	Stmt:  IfStmt.    (81)

	.  reduce 81 (src line 527)


state 45
	Stmt:  WaitStmt.    (82)

	.  reduce 82 (src line 528)


state 46
	Stmt:  DelayStmt.    (83)

	.  reduce 83 (src line 529)


state 47
	Stmt:  GoStmt.    (84)

	.  reduce 84 (src line 530)


state 48
	Stmt:  LogStmt.    (85)

	.  reduce 85 (src line 531)


state 49
	Stmt:  BlockStmt.    (86)

	.  reduce 86 (src line 532)


state 50
	Stmt:  SwitchStmt.    (87)

	.  reduce 87 (src line 534)


state 51
	Stmt:  error.SEMICOLON 

	SEMICOLON  shift 100
	.  error


state 52
	LetStmt:  LET.IDENTIFIER ASSIGN Expression 

	IDENTIFIER  shift 101
	.  error


state 53
	ExprStmt:  Expression.SEMICOLON 

	SEMICOLON  shift 102
	.  error


state 54
	ReturnStmt:  RETURN.Expression 
	ReturnStmt:  RETURN.SEMICOLON 

	DISTRIBUTE  shift 82
	LPAREN  shift 76
	SEMICOLON  shift 104
	NOT  shift 69
	MINUS  shift 70
	IDENTIFIER  shift 72
	INT_LITERAL  shift 77
	FLOAT_LITERAL  shift 78
	STRING_LITERAL  shift 79
	BOOL_LITERAL  shift 80
	DURATION_LITERAL  shift 81
	.  error

	Expression  goto 103
	OrExpr  goto 62
	AndBoolExpr  goto 63
	CmpExpr  goto 64
	AddExpr  goto 65
	MulExpr  goto 66
	UnaryExpr  goto 67
	PrimaryExpr  goto 68
	LiteralExpr  goto 71
	CallExpr  goto 74
	MemberAccessExpr  goto 73
	DistributeExpr  goto 75

state 55
	IfStmt:  IF.Expression BlockStmt IfStmtElseOpt 

	DISTRIBUTE  shift 82
	LPAREN  shift 76
	NOT  shift 69
	MINUS  shift 70
	IDENTIFIER  shift 72
	INT_LITERAL  shift 77
	FLOAT_LITERAL  shift 78
	STRING_LITERAL  shift 79
	BOOL_LITERAL  shift 80
	DURATION_LITERAL  shift 81
	.  error

	Expression  goto 105
	OrExpr  goto 62
	AndBoolExpr  goto 63
	CmpExpr  goto 64
	AddExpr  goto 65
	MulExpr  goto 66
	UnaryExpr  goto 67
	PrimaryExpr  goto 68
	LiteralExpr  goto 71
	CallExpr  goto 74
	MemberAccessExpr  goto 73
	DistributeExpr  goto 75

state 56
	WaitStmt:  WAIT.IdentifierList 

	IDENTIFIER  shift 84
	.  error

	IdentifierList  goto 106

state 57
	DelayStmt:  DELAY.Expression 

	DISTRIBUTE  shift 82
	LPAREN  shift 76
	NOT  shift 69
	MINUS  shift 70
	IDENTIFIER  shift 72
	INT_LITERAL  shift 77
	FLOAT_LITERAL  shift 78
	STRING_LITERAL  shift 79
	BOOL_LITERAL  shift 80
	DURATION_LITERAL  shift 81
	.  error

	Expression  goto 107
	OrExpr  goto 62
	AndBoolExpr  goto 63
	CmpExpr  goto 64
	AddExpr  goto 65
	MulExpr  goto 66
	UnaryExpr  goto 67
	PrimaryExpr  goto 68
	LiteralExpr  goto 71
	CallExpr  goto 74
	MemberAccessExpr  goto 73
	DistributeExpr  goto 75

state 58
	GoStmt:  GO.IDENTIFIER ASSIGN BlockStmt 
	GoStmt:  GO.BlockStmt 
	GoStmt:  GO.IDENTIFIER ASSIGN Expression SEMICOLON 

	LBRACE  shift 60
	IDENTIFIER  shift 108
	.  error

	BlockStmt  goto 109

state 59
	LogStmt:  LOG.Expression CommaExpressionListOpt 

	DISTRIBUTE  shift 82
	LPAREN  shift 76
	NOT  shift 69
	MINUS  shift 70
	IDENTIFIER  shift 72
	INT_LITERAL  shift 77
	FLOAT_LITERAL  shift 78
	STRING_LITERAL  shift 79
	BOOL_LITERAL  shift 80
	DURATION_LITERAL  shift 81
	.  error

	Expression  goto 110
	OrExpr  goto 62
	AndBoolExpr  goto 63
	CmpExpr  goto 64
	AddExpr  goto 65
	MulExpr  goto 66
	UnaryExpr  goto 67
	PrimaryExpr  goto 68
	LiteralExpr  goto 71
	CallExpr  goto 74
	MemberAccessExpr  goto 73
	DistributeExpr  goto 75

state 60
	BlockStmt:  LBRACE.StmtList RBRACE 
	StmtOptList: .    (76)

	.  reduce 76 (src line 521)

	StmtList  goto 111
	StmtOptList  goto 25

state 61
	SwitchStmt:  SWITCH.Expression LBRACE RBRACE 

	DISTRIBUTE  shift 82
	LPAREN  shift 76
	NOT  shift 69
	MINUS  shift 70
	IDENTIFIER  shift 72
	INT_LITERAL  shift 77
	FLOAT_LITERAL  shift 78
	STRING_LITERAL  shift 79
	BOOL_LITERAL  shift 80
	DURATION_LITERAL  shift 81
	.  error

	Expression  goto 112
	OrExpr  goto 62
	AndBoolExpr  goto 63
	CmpExpr  goto 64
	AddExpr  goto 65
	MulExpr  goto 66
	UnaryExpr  goto 67
	PrimaryExpr  goto 68
	LiteralExpr  goto 71
	CallExpr  goto 74
	MemberAccessExpr  goto 73
	DistributeExpr  goto 75

state 62
	Expression:  OrExpr.    (119)
	OrExpr:  OrExpr.OR AndBoolExpr 

	OR  shift 113
	.  reduce 119 (src line 687)


state 63
	OrExpr:  AndBoolExpr.    (120)
	AndBoolExpr:  AndBoolExpr.AND CmpExpr 

	AND  shift 114
	.  reduce 120 (src line 688)


state 64
	AndBoolExpr:  CmpExpr.    (122)

	.  reduce 122 (src line 692)


65: shift/reduce conflict (shift 122(4), red'n 124(0)) on MINUS
state 65
	CmpExpr:  AddExpr.    (124)
	CmpExpr:  AddExpr.EQ AddExpr 
	CmpExpr:  AddExpr.NEQ AddExpr 
	CmpExpr:  AddExpr.LT AddExpr 
	CmpExpr:  AddExpr.LTE AddExpr 
	CmpExpr:  AddExpr.GT AddExpr 
	CmpExpr:  AddExpr.GTE AddExpr 
	AddExpr:  AddExpr.PLUS MulExpr 
	AddExpr:  AddExpr.MINUS MulExpr 

	MINUS  shift 122
	EQ  shift 115
	NEQ  shift 116
	LT  shift 117
	LTE  shift 118
	GT  shift 119
	GTE  shift 120
	PLUS  shift 121
	.  reduce 124 (src line 697)


state 66
	AddExpr:  MulExpr.    (131)
	MulExpr:  MulExpr.MUL UnaryExpr 
	MulExpr:  MulExpr.DIV UnaryExpr 
	MulExpr:  MulExpr.MOD UnaryExpr 

	MUL  shift 123
	DIV  shift 124
	MOD  shift 125
	.  reduce 131 (src line 706)


state 67
	MulExpr:  UnaryExpr.    (134)

	.  reduce 134 (src line 712)


68: shift/reduce conflict (shift 127(0), red'n 138(0)) on LPAREN
state 68
	UnaryExpr:  PrimaryExpr.    (138)
	MemberAccessExpr:  PrimaryExpr.DOT IDENTIFIER 
	CallExpr:  PrimaryExpr.LPAREN RPAREN 
	CallExpr:  PrimaryExpr.LPAREN ArgList RPAREN 

	LPAREN  shift 127
	DOT  shift 126
	.  reduce 138 (src line 718)


state 69
	UnaryExpr:  NOT.UnaryExpr 

	DISTRIBUTE  shift 82
	LPAREN  shift 76
	NOT  shift 69
	MINUS  shift 70
	IDENTIFIER  shift 72
	INT_LITERAL  shift 77
	FLOAT_LITERAL  shift 78
	STRING_LITERAL  shift 79
	BOOL_LITERAL  shift 80
	DURATION_LITERAL  shift 81
	.  error

	UnaryExpr  goto 128
	PrimaryExpr  goto 68
	LiteralExpr  goto 71
	CallExpr  goto 74
	MemberAccessExpr  goto 73
	DistributeExpr  goto 75

state 70
	UnaryExpr:  MINUS.UnaryExpr 

	DISTRIBUTE  shift 82
	LPAREN  shift 76
	NOT  shift 69
	MINUS  shift 70
	IDENTIFIER  shift 72
	INT_LITERAL  shift 77
	FLOAT_LITERAL  shift 78
	STRING_LITERAL  shift 79
	BOOL_LITERAL  shift 80
	DURATION_LITERAL  shift 81
	.  error

	UnaryExpr  goto 129
	PrimaryExpr  goto 68
	LiteralExpr  goto 71
	CallExpr  goto 74
	MemberAccessExpr  goto 73
	DistributeExpr  goto 75

state 71
	PrimaryExpr:  LiteralExpr.    (141)

	.  reduce 141 (src line 724)


state 72
	PrimaryExpr:  IDENTIFIER.    (142)

	.  reduce 142 (src line 726)


state 73
	PrimaryExpr:  MemberAccessExpr.    (143)

	.  reduce 143 (src line 727)


state 74
	PrimaryExpr:  CallExpr.    (144)

	.  reduce 144 (src line 728)


state 75
	PrimaryExpr:  DistributeExpr.    (145)

	.  reduce 145 (src line 729)


state 76
	PrimaryExpr:  LPAREN.Expression RPAREN 

	DISTRIBUTE  shift 82
	LPAREN  shift 76
	NOT  shift 69
	MINUS  shift 70
	IDENTIFIER  shift 72
	INT_LITERAL  shift 77
	FLOAT_LITERAL  shift 78
	STRING_LITERAL  shift 79
	BOOL_LITERAL  shift 80
	DURATION_LITERAL  shift 81
	.  error

	Expression  goto 130
	OrExpr  goto 62
	AndBoolExpr  goto 63
	CmpExpr  goto 64
	AddExpr  goto 65
	MulExpr  goto 66
	UnaryExpr  goto 67
	PrimaryExpr  goto 68
	LiteralExpr  goto 71
	CallExpr  goto 74
	MemberAccessExpr  goto 73
	DistributeExpr  goto 75

state 77
	LiteralExpr:  INT_LITERAL.    (147)

	.  reduce 147 (src line 734)


state 78
	LiteralExpr:  FLOAT_LITERAL.    (148)

	.  reduce 148 (src line 739)


state 79
	LiteralExpr:  STRING_LITERAL.    (149)

	.  reduce 149 (src line 740)


state 80
	LiteralExpr:  BOOL_LITERAL.    (150)

	.  reduce 150 (src line 741)


state 81
	LiteralExpr:  DURATION_LITERAL.    (151)

	.  reduce 151 (src line 742)


state 82
	DistributeExpr:  DISTRIBUTE.TotalClauseOpt LBRACE DistributeExprCaseListOpt DefaultCaseExprOpt RBRACE 
	TotalClauseOpt: .    (107)

	LPAREN  shift 132
	.  reduce 107 (src line 650)

	TotalClauseOpt  goto 131

state 83
	EnumDecl:  ENUM IDENTIFIER LBRACE IdentifierList.RBRACE 
	IdentifierList:  IdentifierList.COMMA IDENTIFIER 

	RBRACE  shift 133
	COMMA  shift 134
	.  error


state 84
	IdentifierList:  IDENTIFIER.    (11)

	.  reduce 11 (src line 218)


state 85
	ComponentDecl:  NATIVE COMPONENT IDENTIFIER LBRACE MethodSigDeclOptList.RBRACE 

	RBRACE  shift 135
	.  error


state 86
	MethodSigDeclOptList:  MethodSigDeclList.    (17)
	MethodSigDeclList:  MethodSigDeclList.MethodSigDecl 

	METHOD  shift 88
	.  reduce 17 (src line 251)

	MethodSigDecl  goto 136

state 87
	MethodSigDeclList:  MethodSigDecl.    (18)

	.  reduce 18 (src line 254)


state 88
	MethodSigDecl:  METHOD.IDENTIFIER LPAREN MethodParamListOpt RPAREN 
	MethodSigDecl:  METHOD.IDENTIFIER LPAREN MethodParamListOpt RPAREN TypeName 

	IDENTIFIER  shift 137
	.  error


state 89
	ComponentDecl:  COMPONENT IDENTIFIER LBRACE ComponentBodyItemOptList RBRACE.    (15)

	.  reduce 15 (src line 240)


state 90
	ComponentBodyItemList:  ComponentBodyItemList ComponentBodyItem.    (25)

	.  reduce 25 (src line 283)


state 91
	ParamDecl:  PARAM IDENTIFIER.TypeName 
	ParamDecl:  PARAM IDENTIFIER.TypeName ASSIGN Expression 

	INT  shift 141
	FLOAT  shift 142
	BOOL  shift 144
	STRING  shift 143
	DURATION  shift 145
	IDENTIFIER  shift 140
	.  error

	TypeName  goto 138
	PrimitiveType  goto 139

state 92
	UsesDecl:  USES IDENTIFIER.IDENTIFIER 

	IDENTIFIER  shift 146
	.  error


state 93
	MethodDecl:  METHOD IDENTIFIER.LPAREN MethodParamListOpt RPAREN BlockStmt 
	MethodDecl:  METHOD IDENTIFIER.LPAREN MethodParamListOpt RPAREN TypeName BlockStmt 

	LPAREN  shift 147
	.  error


state 94
	SystemDecl:  SYSTEM IDENTIFIER LBRACE SystemBodyItemOptList RBRACE.    (48)

	.  reduce 48 (src line 397)


state 95
	SystemBodyItemOptList:  SystemBodyItemOptList SystemBodyItem.    (53)

	.  reduce 53 (src line 417)


state 96
	SystemBodyItem:  InstanceDecl.    (49)

	.  reduce 49 (src line 408)


state 97
	SystemBodyItem:  OptionsDecl.    (50)

	.  reduce 50 (src line 411)


state 98
	SystemBodyItem:  LetStmt.    (51)

	.  reduce 51 (src line 412)


state 99
	InstanceDecl:  USE.IDENTIFIER IDENTIFIER 
	InstanceDecl:  USE.IDENTIFIER IDENTIFIER ASSIGN LBRACE AssignListOpt RBRACE 

	IDENTIFIER  shift 148
	.  error


state 100
	Stmt:  error SEMICOLON.    (88)

	.  reduce 88 (src line 536)


state 101
	LetStmt:  LET IDENTIFIER.ASSIGN Expression 

	ASSIGN  shift 149
	.  error


state 102
	ExprStmt:  Expression SEMICOLON.    (92)

	.  reduce 92 (src line 569)


state 103
	ReturnStmt:  RETURN Expression.    (93)

	.  reduce 93 (src line 573)


state 104
	ReturnStmt:  RETURN SEMICOLON.    (94)

	.  reduce 94 (src line 575)


state 105
	IfStmt:  IF Expression.BlockStmt IfStmtElseOpt 

	LBRACE  shift 60
	.  error

	BlockStmt  goto 150

state 106
	IdentifierList:  IdentifierList.COMMA IDENTIFIER 
	WaitStmt:  WAIT IdentifierList.    (96)

	COMMA  shift 134
	.  reduce 96 (src line 582)


state 107
	DelayStmt:  DELAY Expression.    (95)

	.  reduce 95 (src line 578)


state 108
	GoStmt:  GO IDENTIFIER.ASSIGN BlockStmt 
	GoStmt:  GO IDENTIFIER.ASSIGN Expression SEMICOLON 

	ASSIGN  shift 151
	.  error


state 109
	GoStmt:  GO BlockStmt.    (116)

	.  reduce 116 (src line 674)


state 110
	LogStmt:  LOG Expression.CommaExpressionListOpt 
	CommaExpressionListOpt: .    (100)

	COMMA  shift 153
	.  reduce 100 (src line 615)

	CommaExpressionListOpt  goto 152

state 111
	BlockStmt:  LBRACE StmtList.RBRACE 

	RBRACE  shift 154
	.  error


state 112
	SwitchStmt:  SWITCH Expression.LBRACE RBRACE 

	LBRACE  shift 155
	.  error


state 113
	OrExpr:  OrExpr OR.AndBoolExpr 

	DISTRIBUTE  shift 82
	LPAREN  shift 76
	NOT  shift 69
	MINUS  shift 70
	IDENTIFIER  shift 72
	INT_LITERAL  shift 77
	FLOAT_LITERAL  shift 78
	STRING_LITERAL  shift 79
	BOOL_LITERAL  shift 80
	DURATION_LITERAL  shift 81
	.  error

	AndBoolExpr  goto 156
	CmpExpr  goto 64
	AddExpr  goto 65
	MulExpr  goto 66
	UnaryExpr  goto 67
	PrimaryExpr  goto 68
	LiteralExpr  goto 71
	CallExpr  goto 74
	MemberAccessExpr  goto 73
	DistributeExpr  goto 75

state 114
	AndBoolExpr:  AndBoolExpr AND.CmpExpr 

	DISTRIBUTE  shift 82
	LPAREN  shift 76
	NOT  shift 69
	MINUS  shift 70
	IDENTIFIER  shift 72
	INT_LITERAL  shift 77
	FLOAT_LITERAL  shift 78
	STRING_LITERAL  shift 79
	BOOL_LITERAL  shift 80
	DURATION_LITERAL  shift 81
	.  error

	CmpExpr  goto 157
	AddExpr  goto 65
	MulExpr  goto 66
	UnaryExpr  goto 67
	PrimaryExpr  goto 68
	LiteralExpr  goto 71
	CallExpr  goto 74
	MemberAccessExpr  goto 73
	DistributeExpr  goto 75

state 115
	CmpExpr:  AddExpr EQ.AddExpr 

	DISTRIBUTE  shift 82
	LPAREN  shift 76
	NOT  shift 69
	MINUS  shift 70
	IDENTIFIER  shift 72
	INT_LITERAL  shift 77
	FLOAT_LITERAL  shift 78
	STRING_LITERAL  shift 79
	BOOL_LITERAL  shift 80
	DURATION_LITERAL  shift 81
	.  error

	AddExpr  goto 158
	MulExpr  goto 66
	UnaryExpr  goto 67
	PrimaryExpr  goto 68
	LiteralExpr  goto 71
	CallExpr  goto 74
	MemberAccessExpr  goto 73
	DistributeExpr  goto 75

state 116
	CmpExpr:  AddExpr NEQ.AddExpr 

	DISTRIBUTE  shift 82
	LPAREN  shift 76
	NOT  shift 69
	MINUS  shift 70
	IDENTIFIER  shift 72
	INT_LITERAL  shift 77
	FLOAT_LITERAL  shift 78
	STRING_LITERAL  shift 79
	BOOL_LITERAL  shift 80
	DURATION_LITERAL  shift 81
	.  error

	AddExpr  goto 159
	MulExpr  goto 66
	UnaryExpr  goto 67
	PrimaryExpr  goto 68
	LiteralExpr  goto 71
	CallExpr  goto 74
	MemberAccessExpr  goto 73
	DistributeExpr  goto 75

state 117
	CmpExpr:  AddExpr LT.AddExpr 

	DISTRIBUTE  shift 82
	LPAREN  shift 76
	NOT  shift 69
	MINUS  shift 70
	IDENTIFIER  shift 72
	INT_LITERAL  shift 77
	FLOAT_LITERAL  shift 78
	STRING_LITERAL  shift 79
	BOOL_LITERAL  shift 80
	DURATION_LITERAL  shift 81
	.  error

	AddExpr  goto 160
	MulExpr  goto 66
	UnaryExpr  goto 67
	PrimaryExpr  goto 68
	LiteralExpr  goto 71
	CallExpr  goto 74
	MemberAccessExpr  goto 73
	DistributeExpr  goto 75

state 118
	CmpExpr:  AddExpr LTE.AddExpr 

	DISTRIBUTE  shift 82
	LPAREN  shift 76
	NOT  shift 69
	MINUS  shift 70
	IDENTIFIER  shift 72
	INT_LITERAL  shift 77
	FLOAT_LITERAL  shift 78
	STRING_LITERAL  shift 79
	BOOL_LITERAL  shift 80
	DURATION_LITERAL  shift 81
	.  error

	AddExpr  goto 161
	MulExpr  goto 66
	UnaryExpr  goto 67
	PrimaryExpr  goto 68
	LiteralExpr  goto 71
	CallExpr  goto 74
	MemberAccessExpr  goto 73
	DistributeExpr  goto 75

state 119
	CmpExpr:  AddExpr GT.AddExpr 

	DISTRIBUTE  shift 82
	LPAREN  shift 76
	NOT  shift 69
	MINUS  shift 70
	IDENTIFIER  shift 72
	INT_LITERAL  shift 77
	FLOAT_LITERAL  shift 78
	STRING_LITERAL  shift 79
	BOOL_LITERAL  shift 80
	DURATION_LITERAL  shift 81
	.  error

	AddExpr  goto 162
	MulExpr  goto 66
	UnaryExpr  goto 67
	PrimaryExpr  goto 68
	LiteralExpr  goto 71
	CallExpr  goto 74
	MemberAccessExpr  goto 73
	DistributeExpr  goto 75

state 120
	CmpExpr:  AddExpr GTE.AddExpr 

	DISTRIBUTE  shift 82
	LPAREN  shift 76
	NOT  shift 69
	MINUS  shift 70
	IDENTIFIER  shift 72
	INT_LITERAL  shift 77
	FLOAT_LITERAL  shift 78
	STRING_LITERAL  shift 79
	BOOL_LITERAL  shift 80
	DURATION_LITERAL  shift 81
	.  error

	AddExpr  goto 163
	MulExpr  goto 66
	UnaryExpr  goto 67
	PrimaryExpr  goto 68
	LiteralExpr  goto 71
	CallExpr  goto 74
	MemberAccessExpr  goto 73
	DistributeExpr  goto 75

state 121
	AddExpr:  AddExpr PLUS.MulExpr 

	DISTRIBUTE  shift 82
	LPAREN  shift 76
	NOT  shift 69
	MINUS  shift 70
	IDENTIFIER  shift 72
	INT_LITERAL  shift 77
	FLOAT_LITERAL  shift 78
	STRING_LITERAL  shift 79
	BOOL_LITERAL  shift 80
	DURATION_LITERAL  shift 81
	.  error

	MulExpr  goto 164
	UnaryExpr  goto 67
	PrimaryExpr  goto 68
	LiteralExpr  goto 71
	CallExpr  goto 74
	MemberAccessExpr  goto 73
	DistributeExpr  goto 75

state 122
	AddExpr:  AddExpr MINUS.MulExpr 

	DISTRIBUTE  shift 82
	LPAREN  shift 76
	NOT  shift 69
	MINUS  shift 70
	IDENTIFIER  shift 72
	INT_LITERAL  shift 77
	FLOAT_LITERAL  shift 78
	STRING_LITERAL  shift 79
	BOOL_LITERAL  shift 80
	DURATION_LITERAL  shift 81
	.  error

	MulExpr  goto 165
	UnaryExpr  goto 67
	PrimaryExpr  goto 68
	LiteralExpr  goto 71
	CallExpr  goto 74
	MemberAccessExpr  goto 73
	DistributeExpr  goto 75

state 123
	MulExpr:  MulExpr MUL.UnaryExpr 

	DISTRIBUTE  shift 82
	LPAREN  shift 76
	NOT  shift 69
	MINUS  shift 70
	IDENTIFIER  shift 72
	INT_LITERAL  shift 77
	FLOAT_LITERAL  shift 78
	STRING_LITERAL  shift 79
	BOOL_LITERAL  shift 80
	DURATION_LITERAL  shift 81
	.  error

	UnaryExpr  goto 166
	PrimaryExpr  goto 68
	LiteralExpr  goto 71
	CallExpr  goto 74
	MemberAccessExpr  goto 73
	DistributeExpr  goto 75

state 124
	MulExpr:  MulExpr DIV.UnaryExpr 

	DISTRIBUTE  shift 82
	LPAREN  shift 76
	NOT  shift 69
	MINUS  shift 70
	IDENTIFIER  shift 72
	INT_LITERAL  shift 77
	FLOAT_LITERAL  shift 78
	STRING_LITERAL  shift 79
	BOOL_LITERAL  shift 80
	DURATION_LITERAL  shift 81
	.  error

	UnaryExpr  goto 167
	PrimaryExpr  goto 68
	LiteralExpr  goto 71
	CallExpr  goto 74
	MemberAccessExpr  goto 73
	DistributeExpr  goto 75

state 125
	MulExpr:  MulExpr MOD.UnaryExpr 

	DISTRIBUTE  shift 82
	LPAREN  shift 76
	NOT  shift 69
	MINUS  shift 70
	IDENTIFIER  shift 72
	INT_LITERAL  shift 77
	FLOAT_LITERAL  shift 78
	STRING_LITERAL  shift 79
	BOOL_LITERAL  shift 80
	DURATION_LITERAL  shift 81
	.  error

	UnaryExpr  goto 168
	PrimaryExpr  goto 68
	LiteralExpr  goto 71
	CallExpr  goto 74
	MemberAccessExpr  goto 73
	DistributeExpr  goto 75

state 126
	MemberAccessExpr:  PrimaryExpr DOT.IDENTIFIER 

	IDENTIFIER  shift 169
	.  error


state 127
	CallExpr:  PrimaryExpr LPAREN.RPAREN 
	CallExpr:  PrimaryExpr LPAREN.ArgList RPAREN 

	DISTRIBUTE  shift 82
	LPAREN  shift 76
	RPAREN  shift 170
	NOT  shift 69
	MINUS  shift 70
	IDENTIFIER  shift 72
	INT_LITERAL  shift 77
	FLOAT_LITERAL  shift 78
	STRING_LITERAL  shift 79
	BOOL_LITERAL  shift 80
	DURATION_LITERAL  shift 81
	.  error
